<resources>
    <string name="app_name">Stage Four</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="c">C</string>
    <string name="foot">Foot</string>
    <string name="meter">Meter</string>
    <string name="reverse">Button</string>
    <string name="delete">Button</string>
    <string name="r">R</string>
    <string name="x">X</string>
    <string name="calculator">Calculator</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="history">history</string>



</resources>